# MESC-IA-Projetos-de-IA

./: .gitignore  README.md
basic_00_mlflow_ccds/mlflow_ccds/: Makefile  README.md  environment.yml  pyproject.toml
basic_00_mlflow_ccds/mlflow_ccds/docs/: mkdocs.yml
basic_00_mlflow_ccds/mlflow_ccds/docs/docs/: index.md
basic_00_mlflow_ccds/mlflow_ccds/mlflow_ccds/: __init__.py  dataset.py  features.py  pipeline.py  plots.py
basic_00_mlflow_ccds/mlflow_ccds/mlflow_ccds/modeling/: predict.py  train.py
basic_00_mlflow_ccds/mlflow_ccds/models/: model_20251007_140543.pkl  model_20251007_141416.pkl
basic_00_mlflow_ccds/mlflow_ccds/models/model.pkl/: model.pkl
basic_00_mlflow_ccds/mlflow_ccds/notebooks/: pipeline_execution.ipynb
basic_00_mlflow_ccds/mlflow_ccds/notebooks/mlruns/0/: meta.yaml
basic_00_mlflow_ccds/mlflow_ccds/notebooks/mlruns/341580672406361855/: meta.yaml
basic_00_mlflow_ccds/mlflow_ccds/notebooks/mlruns/858004867310468504/: meta.yaml
basic_00_mlflow_ccds/mlflow_ccds/reports/figures/: classification_report.csv
basic_01_credit_approval_random_forest_ccds/basic_01_rf_classifier/: Makefile  README.md  environment.yml  pyproject.toml
basic_01_credit_approval_random_forest_ccds/basic_01_rf_classifier/docs/: mkdocs.yml
basic_01_credit_approval_random_forest_ccds/basic_01_rf_classifier/docs/docs/: index.md
basic_01_credit_approval_random_forest_ccds/basic_01_rf_classifier/notebooks/: 01_classificacao_credito.ipynb
basic_01_credit_approval_random_forest_ccds/basic_01_rf_classifier/notebooks/data/processed/: features.csv
basic_01_credit_approval_random_forest_ccds/basic_01_rf_classifier/rf_classifier/: __init__.py  dataset.py  features.py  plots.py
basic_01_credit_approval_random_forest_ccds/basic_01_rf_classifier/rf_classifier/modeling/: predict.py  train.py
basic_02_credit_approval_knn_ccds/basic_01_knn_classifier/: Makefile  README.md  environment.yml  pyproject.toml
basic_02_credit_approval_knn_ccds/basic_01_knn_classifier/docs/: mkdocs.yml
basic_02_credit_approval_knn_ccds/basic_01_knn_classifier/docs/docs/: index.md
basic_02_credit_approval_knn_ccds/basic_01_knn_classifier/knn_classifier/: __init__.py  dataset.py  features.py  plots.py
basic_02_credit_approval_knn_ccds/basic_01_knn_classifier/knn_classifier/modeling/: predict.py  train.py
basic_02_credit_approval_knn_ccds/basic_01_knn_classifier/models/: random_forest.pkl
basic_02_credit_approval_knn_ccds/basic_01_knn_classifier/notebooks/: 01_classificacao_credito.ipynb
basic_03_boston_housing/: Makefile  README.md  pyproject.toml
basic_03_boston_housing/boston_housing/: __init__.py  dataset.py  features.py  pipeline.py  plots.py
basic_03_boston_housing/boston_housing/modeling/: predict.py  train.py
basic_03_boston_housing/docs/: mkdocs.yml
basic_03_boston_housing/docs/docs/: index.md
basic_03_boston_housing/notebooks/: pipeline_boston_interativo.ipynb
(+328 files in other folders)
